# showparquet

./: .gitignore  pyproject.toml
showparquet/: __init__.py  __main__.py  cli.py
